[gd_scene load_steps=4 format=3 uid="uid://b3ie5sgf5jhmb"]

[ext_resource type="FontFile" uid="uid://c45mm4v8owa2m" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="1_1hgvt"]
[ext_resource type="Script" uid="uid://dn8l7psejtsnk" path="res://scripts/controllers/ui.gd" id="1_lw3nh"]
[ext_resource type="PackedScene" uid="uid://tu5046kflpoi" path="res://scenes/test/test-settings.tscn" id="3_b868d"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lw3nh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -38.5
offset_right = 108.0
offset_bottom = 38.5
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1hgvt")
theme_override_font_sizes/font_size = 24
text = "resume"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1hgvt")
theme_override_font_sizes/font_size = 24
text = "settings"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_1hgvt")
theme_override_font_sizes/font_size = 24
text = "quit game"

[node name="TestSettings" parent="." instance=ExtResource("3_b868d")]
visible = false
layout_mode = 1

[connection signal="button_up" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_button_up"]
